force-app/main/default/objects/custom_create60__c/custom_create60__c.object-meta.xml
<CustomObject>
    <label>Custom created object60</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects60</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>