force-app/main/default/objects/custom_create60__c/fields/custom_create_60field555__c.field-meta.xml
<CustomField>
    <fullName>custom_create_60field555__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 60field555</label>
    <type>Checkbox</type>
</CustomField>